--- a/internal/build.gradle
+++ b/internal/build.gradle
@@ -1,3 +1,5 @@
 dependencies {
+    // springboot web mvc
+    implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation project(':support')
 }
