--- a/gateway/build.gradle
+++ b/gateway/build.gradle
@@ -3,7 +3,20 @@ ext {
 }
 
 dependencies {
+
+    implementation 'io.jsonwebtoken:jjwt:0.9.1'
+    // spring
+    implementation("org.springframework.boot:spring-boot-starter")
+    // spring cloud api gateway
     implementation 'org.springframework.cloud:spring-cloud-starter-gateway'
+    // spring actuator
+    implementation 'org.springframework.boot:spring-boot-starter-actuator'
+    // circuitBreaker
+//    implementation "io.github.resilience4j:resilience4j-spring-boot2:1.7.0"
+    implementation 'org.springframework.cloud:spring-cloud-starter-circuitbreaker-reactor-resilience4j'
+    // 이거 뭐더라?
+    implementation("io.netty:netty-resolver-dns-native-macos:4.1.86.Final:osx-aarch_64")
+    implementation project(':support')
 }
 
 dependencyManagement {
