--- a/gateway/src/main/resources/application.yml
+++ b/gateway/src/main/resources/application.yml
@@ -1,7 +1,6 @@
 server:
   port: 8080
 
-
 spring:
   application:
     name: gateway
@@ -12,8 +11,57 @@ spring:
           uri: http://localhost:8000/
           predicates:
             - Path=/admin/**
+          filters:
+            - name: AuthFilter
+            - name: CircuitBreaker
+              args:
+                name: defaultCircuitBreaker
+                fallbackUri: forward:/fallback
+                statusCodes:
+                  - 500
+                  - 400
         - id: api-internal
           uri: http://localhost:8100/
           predicates:
             - Path=/internal/**
+      httpclient:
+        connect-timeout: 1000
+        response-timeout: 3000
 
+resilience4j:
+  circuitbreaker:
+    configs:
+      default:
+        # https://resilience4j.readme.io/docs/circuitbreaker
+        registerHealthIndicator: true # Spring boot Actuator 활성화 (default: false)
+        eventConsumerBufferSize: 10 # 이벤트 버퍼 사이즈 (/display/monitor/circuitbreakerevents) (default: 100)
+
+        slidingWindowType: COUNT_BASED # 슬라이딩 윈도우 타입(COUNT_BASED|TIME_BASED) (default: COUNT_BASED)
+        slidingWindowSize: 20 # 슬라이딩 윈도우 수(COUNT_BASED(갯수)|TIME_BASED(기간)) (default: 100)
+        minimumNumberOfCalls: 20 # fail rate 계산을 위한 최소 호출 수 (default: 100)
+        failureRateThreshold: 10 # fail rate 임계값 (default: 50)
+
+        automaticTransitionFromOpenToHalfOpenEnabled: true # waitDurationInOpenState 기간 이후에 half-open 로 자동 전환 활성화 (default: false)
+        waitDurationInOpenState: 300000 # half-open 전환 주기 (default: 60_000, 60sec)
+        permittedNumberOfCallsInHalfOpenState: 10 # half-open 상태에서 허용 할 요청 수 (default: 10)
+
+        slowCallRateThreshold: 100 # slow call 임계값 (default: 100)
+        slowCallDurationThreshold: 60000 # slow call 기준 소요시간 (default: 60_000, 60sec)
+    instances:
+      defaultCircuitBreaker:
+        baseConfig: default
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
+      base-path: /monitor
+  endpoint:
+    shutdown:
+      enabled: true
+    health:
+      show-details: always # actuator에서 디테일한 정보들을 확인하기 위해 설정
+  health:
+    circuitbreakers:
+      enabled: true # actuator를 통해 circuitbraker 상태를 확인하기 위해 설정
