--- a/eureka/build.gradle
+++ b/eureka/build.gradle
@@ -1,7 +1,7 @@
 dependencies {
     // springboot web mvc
     implementation 'org.springframework.boot:spring-boot-starter-web'
-    // eureka client
-    implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-netflix-eureka-client', version: '3.1.1'
+    // eureka server
+    implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-netflix-eureka-server', version: '3.1.1'
     implementation project(':support')
 }
